--- a/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/pom.xml
+++ b/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>net.sf.supercsv</groupId>
+			<artifactId>super-csv</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -45,7 +50,7 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>8.0.28</version>
     </dependency>
-
+    
 
 	</dependencies>
 
